Issue-2: Apply preset credentials for admin and supervisor

--- a/latest/configs/zoomdata.properties
+++ b/latest/configs/zoomdata.properties
@@ -28,3 +28,11 @@ discovery.cache.refresh.rate=5000
 logging.dir=/opt/zoomdata/logs
 
 charts.allow-builtin-update=true
+
+# make sure to allow not secure credentials like admin/admin
+auth.password.policy.minCharacters=5
+auth.password.policy.maxCharacters=10
+auth.password.policy.minLowercaseCharacters=0
+auth.password.policy.minUppercaseCharacters=0
+auth.password.policy.minNumericCharacters=0
+auth.password.policy.minSpecialCharacters=0
