--- a/latest/setup/Dockerfile
+++ b/latest/setup/Dockerfile
@@ -1,6 +1,7 @@
 FROM alpine:latest
 
-RUN apk add -U curl
-COPY setup-zoomdata.sh /setup-zoomdata.sh
+RUN apk add -U curl bash
+COPY ./supply-files /supply-files
+COPY ./setup-zoomdata.sh /setup-zoomdata.sh
 
 CMD /setup-zoomdata.sh
