Update RTS creation script and imported dashboard

--- a/latest/setup/Dockerfile
+++ b/latest/setup/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine:latest
 
-RUN apk add -U curl bash
+RUN apk add -U curl bash sed jq
 COPY ./supply-files /supply-files
 COPY ./setup-zoomdata.sh /setup-zoomdata.sh
 
