Introduce COMPOSE_FILE env varible

--- a/latest/.env
+++ b/latest/.env
@@ -1,3 +1,6 @@
+# Set of docker compose files to use by default
+COMPOSE_FILE=docker-compose.yml:docker-compose-client.yml:services/docker-compose-data-writer-postgresql.yml:edc/docker-compose-edc-apache-solr.yml:edc/docker-compose-edc-rts.yml:edc/docker-compose-edc-postgresql.yml
+
 # Configuration set
 CONFIG_SET=configs
 
