--- a/latest/docker-compose.yml
+++ b/latest/docker-compose.yml
@@ -45,6 +45,7 @@ services:
     image: postgres:9.5
     environment:
       - POSTGRES_DB=postgres
+      - POSTGRES_HOST_AUTH_METHOD=trust
     ports:
       - 5432:5432
     volumes:
