--- a/latest/configs/data-writer-postgresql.properties
+++ b/latest/configs/data-writer-postgresql.properties
@@ -1,4 +1,4 @@
-# Zoomdata Stream-Writer specific configuration
+# LogiComposer Data-Writer specific configuration
 
 endpoints.metrics.sensitive=false
 
