--- a/latest/.env
+++ b/latest/.env
@@ -5,7 +5,7 @@ COMPOSE_FILE=docker-compose.yml:docker-compose-client.yml:services/docker-compos
 CONFIG_SET=configs
 
 # Trailing slashes are important
-# Zoomdata docker repository. Set to empty in '.local/env' file to use local images
+# LogiComposer docker repository. Set to empty in '.local/env' file to use local images
 ZD_REPO=zoomdata/
 ZD_TAG=latest
 
